# challenge_bam

./: .gitignore  README.md  pyproject.toml
challenge_bam/: challenge_bam.py
challenge_bam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_challenge_bam.py
