[tool.poetry]
name = "challenge_bam"
version = "0.1.0"
description = ""
authors = ["kevin.yauy <kevin.yauy@seqone.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pysam = "^0.15.4"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.5"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
